olap/antlr-parser/flink-sql-parser/src/main/kotlin/com/platform/antlr/parser/flink/antlr4/FlinkCdcSqlParser.java
// Generated from java-escape by ANTLR 4.11.1
package com.platform.antlr.parser.flink.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FlinkCdcSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEMICOLON=1, LEFT_PAREN=2, RIGHT_PAREN=3, COMMA=4, DOT=5, LEFT_BRACKET=6, 
		RIGHT_BRACKET=7, ADD=8, AFTER=9, ALL=10, AS=11, BEGIN=12, BY=13, CAST=14, 
		COLUMN=15, COMMENT=16, CREATE=17, DATABASE=18, DISTINCT=19, DIV=20, END=21, 
		EXCLUDING=22, EXISTS=23, FALSE=24, FIRST=25, IF=26, INCLUDING=27, KAFKA=28, 
		NOT=29, NULL=30, OPTIONS=31, PARTITIONED=32, SET=33, STATEMENT=34, TABLE=35, 
		TABLES=36, TRUE=37, WITH=38, EQ=39, NSEQ=40, NEQ=41, NEQJ=42, LT=43, LTE=44, 
		GT=45, GTE=46, PLUS=47, MINUS=48, ASTERISK=49, SLASH=50, PERCENT=51, TILDE=52, 
		AMPERSAND=53, PIPE=54, CONCAT_PIPE=55, HAT=56, COLON=57, ARROW=58, HENT_START=59, 
		HENT_END=60, STRING=61, BIGINT_LITERAL=62, SMALLINT_LITERAL=63, TINYINT_LITERAL=64, 
		INTEGER_VALUE=65, EXPONENT_VALUE=66, DECIMAL_VALUE=67, FLOAT_LITERAL=68, 
		DOUBLE_LITERAL=69, BIGDECIMAL_LITERAL=70, IDENTIFIER=71, BACKQUOTED_IDENTIFIER=72, 
		SIMPLE_COMMENT=73, BRACKETED_COMMENT=74, WS=75, UNRECOGNIZED=76;
	public static final int
		RULE_singleStatement = 0, RULE_statement = 1, RULE_multipartIdentifier = 2, 
		RULE_identifierList = 3, RULE_identifierSeq = 4, RULE_stringLit = 5, RULE_commentSpec = 6, 
		RULE_propertyList = 7, RULE_property = 8, RULE_propertyKey = 9, RULE_propertyValue = 10, 
		RULE_computeColList = 11, RULE_computeColDef = 12, RULE_expression = 13, 
		RULE_valueExpression = 14, RULE_primaryExpression = 15, RULE_functionName = 16, 
		RULE_setQuantifier = 17, RULE_identifier = 18, RULE_quotedIdentifier = 19, 
		RULE_constant = 20, RULE_number = 21, RULE_comparisonOperator = 22, RULE_arithmeticOperator = 23, 
		RULE_booleanValue = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"singleStatement", "statement", "multipartIdentifier", "identifierList", 
			"identifierSeq", "stringLit", "commentSpec", "propertyList", "property", 
			"propertyKey", "propertyValue", "computeColList", "computeColDef", "expression", 
			"valueExpression", "primaryExpression", "functionName", "setQuantifier", 
			"identifier", "quotedIdentifier", "constant", "number", "comparisonOperator", 
			"arithmeticOperator", "booleanValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "','", "'.'", "'['", "']'", "'ADD'", "'AFTER'", 
			"'ALL'", "'AS'", "'BEGIN'", "'BY'", "'CAST'", "'COLUMN'", "'COMMENT'", 
			"'CREATE'", "'DATABASE'", "'DISTINCT'", "'DIV'", "'END'", "'EXCLUDING'", 
			"'EXISTS'", "'FALSE'", "'FIRST'", "'IF'", "'INCLUDING'", "'KAFKA'", "'NOT'", 
			"'NULL'", "'OPTIONS'", "'PARTITIONED'", "'SET'", "'STATEMENT'", "'TABLE'", 
			"'TABLES'", "'TRUE'", "'WITH'", null, "'<=>'", "'<>'", "'!='", "'<'", 
			null, "'>'", null, "'+'", "'-'", "'*'", "'/'", "'%'", "'~'", "'&'", "'|'", 
			"'||'", "'^'", "':'", "'->'", "'/*+'", "'*/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEMICOLON", "LEFT_PAREN", "RIGHT_PAREN", "COMMA", "DOT", "LEFT_BRACKET", 
			"RIGHT_BRACKET", "ADD", "AFTER", "ALL", "AS", "BEGIN", "BY", "CAST", 
			"COLUMN", "COMMENT", "CREATE", "DATABASE", "DISTINCT", "DIV", "END", 
			"EXCLUDING", "EXISTS", "FALSE", "FIRST", "IF", "INCLUDING", "KAFKA", 
			"NOT", "NULL", "OPTIONS", "PARTITIONED", "SET", "STATEMENT", "TABLE", 
			"TABLES", "TRUE", "WITH", "EQ", "NSEQ", "NEQ", "NEQJ", "LT", "LTE", "GT", 
			"GTE", "PLUS", "MINUS", "ASTERISK", "SLASH", "PERCENT", "TILDE", "AMPERSAND", 
			"PIPE", "CONCAT_PIPE", "HAT", "COLON", "ARROW", "HENT_START", "HENT_END", 
			"STRING", "BIGINT_LITERAL", "SMALLINT_LITERAL", "TINYINT_LITERAL", "INTEGER_VALUE", 
			"EXPONENT_VALUE", "DECIMAL_VALUE", "FLOAT_LITERAL", "DOUBLE_LITERAL", 
			"BIGDECIMAL_LITERAL", "IDENTIFIER", "BACKQUOTED_IDENTIFIER", "SIMPLE_COMMENT", 
			"BRACKETED_COMMENT", "WS", "UNRECOGNIZED"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FlinkCdcSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleStatementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FlinkCdcSqlParser.EOF, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(FlinkCdcSqlParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(FlinkCdcSqlParser.SEMICOLON, i);
		}
		public SingleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).enterSingleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).exitSingleStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlinkCdcSqlParserVisitor ) return ((FlinkCdcSqlParserVisitor<? extends T>)visitor).visitSingleStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleStatementContext singleStatement() throws RecognitionException {
		SingleStatementContext _localctx = new SingleStatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_singleStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			statement();
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMICOLON) {
				{
				{
				setState(51);
				match(SEMICOLON);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EndStatementContext extends StatementContext {
		public TerminalNode END() { return getToken(FlinkCdcSqlParser.END, 0); }
		public EndStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).enterEndStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).exitEndStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlinkCdcSqlParserVisitor ) return ((FlinkCdcSqlParserVisitor<? extends T>)visitor).visitEndStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BeginStatementContext extends StatementContext {
		public TerminalNode BEGIN() { return getToken(FlinkCdcSqlParser.BEGIN, 0); }
		public TerminalNode STATEMENT() { return getToken(FlinkCdcSqlParser.STATEMENT, 0); }
		public TerminalNode SET() { return getToken(FlinkCdcSqlParser.SET, 0); }
		public BeginStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).enterBeginStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).exitBeginStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlinkCdcSqlParserVisitor ) return ((FlinkCdcSqlParserVisitor<? extends T>)visitor).visitBeginStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CreateDatabaseContext extends StatementContext {
		public MultipartIdentifierContext sink;
		public PropertyListContext sinkOptions;
		public MultipartIdentifierContext source;
		public Token includeTable;
		public Token excludeTable;
		public PropertyListContext sourceOptions;
		public TerminalNode CREATE() { return getToken(FlinkCdcSqlParser.CREATE, 0); }
		public List<TerminalNode> DATABASE() { return getTokens(FlinkCdcSqlParser.DATABASE); }
		public TerminalNode DATABASE(int i) {
			return getToken(FlinkCdcSqlParser.DATABASE, i);
		}
		public TerminalNode IF() { return getToken(FlinkCdcSqlParser.IF, 0); }
		public TerminalNode NOT() { return getToken(FlinkCdcSqlParser.NOT, 0); }
		public TerminalNode EXISTS() { return getToken(FlinkCdcSqlParser.EXISTS, 0); }
		public TerminalNode AS() { return getToken(FlinkCdcSqlParser.AS, 0); }
		public List<MultipartIdentifierContext> multipartIdentifier() {
			return getRuleContexts(MultipartIdentifierContext.class);
		}
		public MultipartIdentifierContext multipartIdentifier(int i) {
			return getRuleContext(MultipartIdentifierContext.class,i);
		}
		public TerminalNode KAFKA() { return getToken(FlinkCdcSqlParser.KAFKA, 0); }
		public TerminalNode PARTITIONED() { return getToken(FlinkCdcSqlParser.PARTITIONED, 0); }
		public TerminalNode BY() { return getToken(FlinkCdcSqlParser.BY, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public CommentSpecContext commentSpec() {
			return getRuleContext(CommentSpecContext.class,0);
		}
		public TerminalNode WITH() { return getToken(FlinkCdcSqlParser.WITH, 0); }
		public TerminalNode INCLUDING() { return getToken(FlinkCdcSqlParser.INCLUDING, 0); }
		public TerminalNode EXCLUDING() { return getToken(FlinkCdcSqlParser.EXCLUDING, 0); }
		public List<TerminalNode> TABLE() { return getTokens(FlinkCdcSqlParser.TABLE); }
		public TerminalNode TABLE(int i) {
			return getToken(FlinkCdcSqlParser.TABLE, i);
		}
		public TerminalNode OPTIONS() { return getToken(FlinkCdcSqlParser.OPTIONS, 0); }
		public List<PropertyListContext> propertyList() {
			return getRuleContexts(PropertyListContext.class);
		}
		public PropertyListContext propertyList(int i) {
			return getRuleContext(PropertyListContext.class,i);
		}
		public List<TerminalNode> STRING() { return getTokens(FlinkCdcSqlParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(FlinkCdcSqlParser.STRING, i);
		}
		public TerminalNode ALL() { return getToken(FlinkCdcSqlParser.ALL, 0); }
		public TerminalNode TABLES() { return getToken(FlinkCdcSqlParser.TABLES, 0); }
		public CreateDatabaseContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).enterCreateDatabase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).exitCreateDatabase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlinkCdcSqlParserVisitor ) return ((FlinkCdcSqlParserVisitor<? extends T>)visitor).visitCreateDatabase(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CreateTableContext extends StatementContext {
		public MultipartIdentifierContext sink;
		public PropertyListContext sinkOptions;
		public MultipartIdentifierContext source;
		public PropertyListContext sourceOptions;
		public TerminalNode CREATE() { return getToken(FlinkCdcSqlParser.CREATE, 0); }
		public List<TerminalNode> TABLE() { return getTokens(FlinkCdcSqlParser.TABLE); }
		public TerminalNode TABLE(int i) {
			return getToken(FlinkCdcSqlParser.TABLE, i);
		}
		public TerminalNode IF() { return getToken(FlinkCdcSqlParser.IF, 0); }
		public TerminalNode NOT() { return getToken(FlinkCdcSqlParser.NOT, 0); }
		public TerminalNode EXISTS() { return getToken(FlinkCdcSqlParser.EXISTS, 0); }
		public TerminalNode AS() { return getToken(FlinkCdcSqlParser.AS, 0); }
		public List<MultipartIdentifierContext> multipartIdentifier() {
			return getRuleContexts(MultipartIdentifierContext.class);
		}
		public MultipartIdentifierContext multipartIdentifier(int i) {
			return getRuleContext(MultipartIdentifierContext.class,i);
		}
		public TerminalNode PARTITIONED() { return getToken(FlinkCdcSqlParser.PARTITIONED, 0); }
		public TerminalNode BY() { return getToken(FlinkCdcSqlParser.BY, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public CommentSpecContext commentSpec() {
			return getRuleContext(CommentSpecContext.class,0);
		}
		public TerminalNode WITH() { return getToken(FlinkCdcSqlParser.WITH, 0); }
		public TerminalNode OPTIONS() { return getToken(FlinkCdcSqlParser.OPTIONS, 0); }
		public TerminalNode ADD() { return getToken(FlinkCdcSqlParser.ADD, 0); }
		public TerminalNode COLUMN() { return getToken(FlinkCdcSqlParser.COLUMN, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(FlinkCdcSqlParser.LEFT_PAREN, 0); }
		public ComputeColListContext computeColList() {
			return getRuleContext(ComputeColListContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(FlinkCdcSqlParser.RIGHT_PAREN, 0); }
		public List<PropertyListContext> propertyList() {
			return getRuleContexts(PropertyListContext.class);
		}
		public PropertyListContext propertyList(int i) {
			return getRuleContext(PropertyListContext.class,i);
		}
		public CreateTableContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).enterCreateTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).exitCreateTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlinkCdcSqlParserVisitor ) return ((FlinkCdcSqlParserVisitor<? extends T>)visitor).visitCreateTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new BeginStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				match(BEGIN);
				setState(60);
				match(STATEMENT);
				setState(61);
				match(SET);
				}
				break;
			case 2:
				_localctx = new EndStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(END);
				}
				break;
			case 3:
				_localctx = new CreateTableContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				match(CREATE);
				setState(64);
				match(TABLE);
				setState(65);
				match(IF);
				setState(66);
				match(NOT);
				setState(67);
				match(EXISTS);
				setState(68);
				((CreateTableContext)_localctx).sink = multipartIdentifier();
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PARTITIONED) {
					{
					setState(69);
					match(PARTITIONED);
					setState(70);
					match(BY);
					setState(71);
					identifierList();
					}
				}

				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMENT) {
					{
					setState(74);
					commentSpec();
					}
				}

				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WITH) {
					{
					setState(77);
					match(WITH);
					setState(78);
					((CreateTableContext)_localctx).sinkOptions = propertyList();
					}
				}

				setState(81);
				match(AS);
				setState(82);
				match(TABLE);
				setState(83);
				((CreateTableContext)_localctx).source = multipartIdentifier();
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPTIONS) {
					{
					setState(84);
					match(OPTIONS);
					setState(85);
					((CreateTableContext)_localctx).sourceOptions = propertyList();
					}
				}

				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ADD) {
					{
					setState(88);
					match(ADD);
					setState(89);
					match(COLUMN);
					setState(90);
					match(LEFT_PAREN);
					setState(91);
					computeColList();
					setState(92);
					match(RIGHT_PAREN);
					}
				}

				}
				break;
			case 4:
				_localctx = new CreateDatabaseContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				match(CREATE);
				setState(97);
				match(DATABASE);
				setState(98);
				match(IF);
				setState(99);
				match(NOT);
				setState(100);
				match(EXISTS);
				setState(101);
				((CreateDatabaseContext)_localctx).sink = multipartIdentifier();
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PARTITIONED) {
					{
					setState(102);
					match(PARTITIONED);
					setState(103);
					match(BY);
					setState(104);
					identifierList();
					}
				}

				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMENT) {
					{
					setState(107);
					commentSpec();
					}
				}

				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WITH) {
					{
					setState(110);
					match(WITH);
					setState(111);
					((CreateDatabaseContext)_localctx).sinkOptions = propertyList();
					}
				}

				setState(114);
				match(AS);
				setState(115);
				_la = _input.LA(1);
				if ( !(_la==DATABASE || _la==KAFKA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(116);
				((CreateDatabaseContext)_localctx).source = multipartIdentifier();
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INCLUDING) {
					{
					setState(117);
					match(INCLUDING);
					setState(122);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ALL:
						{
						setState(118);
						match(ALL);
						setState(119);
						match(TABLES);
						}
						break;
					case TABLE:
						{
						setState(120);
						match(TABLE);
						setState(121);
						((CreateDatabaseContext)_localctx).includeTable = match(STRING);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}

				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EXCLUDING) {
					{
					setState(126);
					match(EXCLUDING);
					setState(127);
					match(TABLE);
					setState(128);
					((CreateDatabaseContext)_localctx).excludeTable = match(STRING);
					}
				}

				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OPTIONS) {
					{
					setState(131);
					match(OPTIONS);
					setState(132);
					((CreateDatabaseContext)_localctx).sourceOptions = propertyList();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultipartIdentifierContext extends ParserRuleContext {
		public IdentifierContext identifier;
		public List<IdentifierContext> parts = new ArrayList<IdentifierContext>();
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(FlinkCdcSqlParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(FlinkCdcSqlParser.DOT, i);
		}
		public MultipartIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multipartIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).enterMultipartIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).exitMultipartIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlinkCdcSqlParserVisitor ) return ((FlinkCdcSqlParserVisitor<? extends T>)visitor).visitMultipartIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultipartIdentifierContext multipartIdentifier() throws RecognitionException {
		MultipartIdentifierContext _localctx = new MultipartIdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_multipartIdentifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			((MultipartIdentifierContext)_localctx).identifier = identifier();
			((MultipartIdentifierContext)_localctx).parts.add(((MultipartIdentifierContext)_localctx).identifier);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(138);
				match(DOT);
				setState(139);
				((MultipartIdentifierContext)_localctx).identifier = identifier();
				((MultipartIdentifierContext)_localctx).parts.add(((MultipartIdentifierContext)_localctx).identifier);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierListContext extends ParserRuleContext {
		public TerminalNode LEFT_PAREN() { return getToken(FlinkCdcSqlParser.LEFT_PAREN, 0); }
		public IdentifierSeqContext identifierSeq() {
			return getRuleContext(IdentifierSeqContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(FlinkCdcSqlParser.RIGHT_PAREN, 0); }
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).enterIdentifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlinkCdcSqlParserListener ) ((FlinkCdcSqlParserListener)listener).exitIdentifierList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlinkCdcSqlParserVisitor ) return ((FlinkCdcSqlParserVisitor<? extends T>)visitor).visitIdentifierList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_identifierList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(LEFT_PAREN);
			setState(146);
			identifierSeq();
			setState(147);
			match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
